poc(java): R-D5 pull arms gated on 8 and 17, R-D9 NULL pin fixed, R-E4 confirmed, STATE rewritten
WP4 item 6 (R-D5): gen/gate.sh runs the correctness gate on README 5.2's arms a, b and c
and lists every arm's row count; ffi-pull and ffi-pull-walk are in it. 1,389 checks per
arm, 0 failures (logs/java/rd5-gate.log, rd5-conformance-arm-{a,b,c}.log). The pull arms
show 0 reverse crossings in the same run.

WP4 item 10 (R-D9, Java part): the bulk-bytes encode entry now refuses a NULL
GetPrimitiveArrayCritical, fixed in gen/java_jni.py and regenerated; the two uri pins in
native/rpc.c swept too. Fault injection shows the old shim entering the core with
(NULL, 65536) and the new one returning AK_ERR_HOST (logs/java/rd9-jni-null.log).

R-E4, confirmed by running, not fixed (WP5): arm R against ffi/corpus fails 19 of 392
counted rows (18 X-tag-zero-*, E-map-entry-empty), same on the floor; merge semantics and
the unknown oneof case confirmed outside the corpus, -0.0 by reading only
(logs/java/re4-corpus-armR.log).

Also: the Java 8 floor build had been broken since 5241ced (RunRpc used ProcessHandle);
fixed. rpc.c takes ak_client_opts from the generated header.

WP6 (R-F1): STATE.md rewritten without contradictions, recommendations or timing figures;
levels floor Java 8, target JDK 17.

Built against git archive 817174f ffi/poc/codec in a scratch dir (core unmodified).

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01PheycaLyXA4a9kMxTWJgZC